fixed code spacing

--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,6 @@ body{
   justify-content:center;
 }
 
-#iitLogo{
-  border-radius: 25px;
-}
-
 #textContent{
   text-align:center;
   border:10px solid;
